# aviutl-OilPainting

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CREDITS.md  README.md  pack.ps1
script/: 油絵.anm
src/: OilPainting.rc  main.cpp  resource.h
